RESOLVED FIXED121360
AnimationBase::m_animation is never null
https://bugs.webkit.org/show_bug.cgi?id=121360
Summary AnimationBase::m_animation is never null
Anders Carlsson
Reported 2013-09-14 10:18:58 PDT
AnimationBase::m_animation is never null
Attachments
Patch (11.34 KB, patch)
2013-09-14 10:22 PDT, Anders Carlsson
darin: review+
Anders Carlsson
Comment 1 2013-09-14 10:22:00 PDT
Anders Carlsson
Comment 2 2013-09-14 11:08:52 PDT
Note You need to log in before you can comment on or make changes to this bug.