AnimationBase::m_animation is never null https://bugs.webkit.org/show_bug.cgi?id=121360

Reviewed by Darin Adler.

Enforce this by using references instead of pointers.

* page/animation/AnimationBase.cpp:
* page/animation/AnimationBase.h:
* page/animation/CompositeAnimation.cpp:
* page/animation/ImplicitAnimation.cpp:
* page/animation/ImplicitAnimation.h:
* page/animation/KeyframeAnimation.cpp:
* page/animation/KeyframeAnimation.h:

Canonical link: https://commits.webkit.org/139328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155771 268f45cc-cd09-0410-ab3c-d52691b4dbfc