Source/WebCore/page/animation/ImplicitAnimation.cpp
@@ -38,9 +38,9 @@
 
 namespace WebCore {
 
-ImplicitAnimation::ImplicitAnimation(const Animation* transition, CSSPropertyID animatingProperty, RenderObject* renderer, CompositeAnimation* compAnim, RenderStyle* fromStyle)
+ImplicitAnimation::ImplicitAnimation(const Animation& transition, CSSPropertyID animatingProperty, RenderObject* renderer, CompositeAnimation* compAnim, RenderStyle* fromStyle)
     : AnimationBase(transition, renderer, compAnim)
-    , m_transitionProperty(transition->property())
+    , m_transitionProperty(transition.property())
     , m_animatingProperty(animatingProperty)
     , m_overridden(false)
     , m_active(true)
